# ninepanels

./: .gitignore  9p_bible.md  9p_guide.md  Dockerfile  README.md  alembic.ini  backup.sh  build_staging.sh  ci_set_env.sh  clone.sh  data.sh  docker-compose.yaml  manage.sh  mc.sh  migrate.sh  pyproject.toml  restore.sh  run.sh  test.sh
.github/workflows/: ci.yml  codeql.yml
alembic/: env.py
alembic/versions/: 08ab49254135_add_is_admin_to_users.py  176f869e40db_add_panels_description_column.py  23097bb66e3a_add_password_reset_tokens_table.py  2ab9167a4927_add_last_activity_to_user.py  2e98ad81d972_add_method_path_col.py  40f4fbfa9118_add_is_fill_to_day.py  466d8a99e299_add_created_at_to_panel.py  490fd05774cc_add_last_login_to_user.py  4c75c96fe49f_add_blacklisted_access_tokens_table.py  7556b422a575_add_timings_table.py  af513b19333e_add_timing_stats_table.py  cbee85208c46_add_event_id_to_timings_table.py  d39fb58384eb_add_day_table_last_updated_to_panel_and_.py  ec070c72a627_add_panel_position_column.py
incident_reports/: 070224.md  070923.md
ninepanels/: auth.py  comms.py  config.py  crud.py  crud_build_1.py  data_mgmt.py  database.py  errors.py  event_dispatcher.py  event_models.py  event_types.py  events.py  exceptions.py  logs.py  main.py  middleware.py  monitoring.py  performance.py  ping.py  pydmodels.py  queues.py  sqlmodels.py  timing.py  utils.py
ninepanels/core/: config.py
ninepanels/db/: crud.py  data_mgmt.py  database.py
tests/: conftest.py  test_api.py  test_ci.py  test_crud.py  test_panel_sort.py  test_services.py
tests/scratch/: 1.py  (+9 more)
(+25 files in other folders)
