[tool.poetry]
name = "ninepanels"
version = "0.0.1"
description = "consistency vigilance"
authors = ["Ben Dyer <ben@atomscale.co>"]
license = "MIT Licence"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.3.0"
SQLAlchemy = "^2.0.18"
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"
pytest = "^7.4.0"
pydantic = "^2.0.2"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
python-multipart = "^0.0.6"
httpx = "^0.24.1"
jose = "^1.0.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
